Update java/gradle.md